# derivatives

./: README.md  improvements.md  pyproject.toml  requirements.txt  specifications.md
.streamlit/: config.toml
backend/: __init__.py
backend/calibration/: __init__.py  _reparam.py  base.py  bates_calibrator.py  constants.py  custom_calibrator.py  feller.py  garch_calibrator.py  heston_calibrator.py  heston_nandi_calibrator.py  implied_vol.py  lm_helpers.py  market_data.py  merton_calibrator.py  ngarch_q_calibrator.py  pricing_loop.py  search_space.py  stationarity.py  transforms.py  uncertainty.py  utils.py
backend/calibration/objectives/: __init__.py  base.py  huber.py  iv_mse.py  price_mse.py  relative.py  spread_weighted.py  vega_weighted.py
backend/calibration/optimizers/: __init__.py  base.py  differential_evolution.py  lbfgs.py  lm_jax.py  nelder_mead.py
backend/core/: __init__.py  bs_formulas.py  constants.py  interfaces.py  market.py  registry.py  result_types.py  structured_product.py
backend/engines/: __init__.py  _registration.py  analytic_engine.py  exotic_engine.py  fft_engine.py  mc_engine.py  structured_kernels.py  structured_kernels_warmup.py  structured_mc_engine.py  vectorized_bs.py
backend/engines/aad/: __init__.py
backend/engines/exotic/: __init__.py  _advanced_registration.py  _fourier_terminal.py  _greeks_bumps.py  _greeks_kernels.py  _mc_payoff_advanced.py  _mc_payoff_registry.py  _mc_payoff_terminal.py  _option_types.py  _registry.py  _rootfind.py  _terminal_payoffs.py  asian.py  asian_arithmetic.py  asset_or_nothing.py  engine.py  (+23 more)
backend/greeks/: __init__.py  _instrument_utils.py  analytic.py  calculator.py  numerical.py  strategies.py
backend/instruments/: __init__.py  _frozen.py  exercise.py  options.py  payoffs.py  strategies.py
backend/math_kernels/: __init__.py  payoff_kernels.py  random.py  regression.py  sde_kernels.py
backend/models/: __init__.py  base.py  bates.py  garch.py  gbm.py  heston.py  heston_nandi.py  merton.py  ngarch_q.py  registry.py  vol_bump.py
backend/old/: __init__.py  agarch.py  binomial_tree.py  black_merton_scholes.py  ch07_modeling_volatility.py  crsp_utils.py  dfbook.py  diffusion_model.py  economy.py  garch.py  garch_c.c  heston1993.py  hypotheses.py  instruments.py  internal_script.py  introduction.py  jupyter_notebook.py  merton_model.py  monte_carlo.py  numerical_methods.py  option_metrics.py  option_pricing.py  parameters.py  plot_utils.py  sp_tests.py  tasks.py  test_suite.py  toolkit.py  yf_utils.py
backend/option_pricing/: __init__.py  base.py  bates.py  bates_fft.py  black_scholes.py  garch_mc.py  heston.py  heston_fft.py  merton.py  options_calculator.py
backend/portfolio/: __init__.py  breakeven.py  greeks.py  greeks_surfaces.py  pnl.py  portfolio.py  positions.py  risk_analysis.py
backend/simulation/: __init__.py  base.py  constants.py  enums.py  exceptions.py  factory.py  fhs.py  pnl_engine.py  simulate_paths.py  simulate_volatility.py  types.py  utils.py
backend/utils/: __init__.py  logging.py  math.py  math_jax.py  validation.py
docs/: BACKEND.md  GREEKS_INTEGRATION_PLAN.md  backend_issues_and_fixes.md
notebooks/: ch01_introduction.ipynb  ch02_diffusion_model.ipynb  ch04_discrete_time.ipynb  ch06_numerical_methods.ipynb  ch06_problem06.ipynb  ch07_modeling_volatility.ipynb  garch_estimation.ipynb  heston1993.ipynb  option_metrics.ipynb  sp_examples.ipynb  sp_simulations.ipynb  test_suite.ipynb
streamlit_app/: __init__.py
streamlit_app/calibration/: __init__.py  app.py  requirements.txt
streamlit_app/common/: __init__.py  chart_theme.py
streamlit_app/option_pricer/: app.py  guide_formula.py
streamlit_app/options_greeks/: app.py  guide_formula.py  requirements.txt
streamlit_app/simulation/: __init__.py  app.py  requirements.txt
tests/: __init__.py  conftest.py  demo_backend.py  test_engines.py  test_exotic_options.py  test_garch_simulation.py  test_greeks_integration.py  test_interface_compliance.py  test_market.py  test_models.py  test_portfolio.py  test_registry.py  test_result_types.py  test_simulate_paths.py  test_simulate_volatility.py  test_simulation.py  test_theoretical.py  test_vol_bump.py
(+279 files in other folders)
