[project]
name = "derivatives"
version = "0.1.0"
description = "Option pricing system with separation of concerns architecture"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0,<2.4",
    "numba>=0.62.0",
    "scipy>=1.15.0",
    "streamlit>=1.40.0",
    "plotly>=5.0.0",
    "scipy-stubs~=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
