[project]
name = "derivatives"
version = "0.1.0"
description = "Option pricing system with separation of concerns architecture"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0,<2.4",
    "numba>=0.62.0",
    "scipy>=1.15.0",
    "streamlit>=1.40.0",
    "plotly>=5.0.0",
    "scipy-stubs~=1.17.0",
    "streamlit-code-editor>=0.1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
# Verbose output to display test results
addopts = "-v -s --tb=short"
# -v: verbose mode (shows test names)
# -s: disable output capture (shows print statements)
# --tb=short: shorter traceback format

testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Display duration of slowest tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
# E402: Module import not at top — Streamlit apps use sys.path before imports
# F403: Import star — used in config __init__.py for convenience re-exports
ignore = ["E402", "F403"]

[tool.ruff.lint.per-file-ignores]
# F401: Unused imports in __init__.py are intentional re-exports
"__init__.py" = ["F401"]
