[project]
name = "derivatives"
version = "0.1.0"
description = "Option pricing system with separation of concerns architecture"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0,<2.4",
    "numba>=0.62.0",
    "scipy>=1.15.0",
    "streamlit>=1.40.0",
    "plotly>=5.0.0",
    "scipy-stubs~=1.17.0",
    "streamlit-code-editor>=0.1.22",
    # Synced from dv_environment.yml
    "cython>=3.0.11",
    "cytoolz>=1.0.1",
    "inflect>=7.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter-client>=8.6.3",
    "jupyter-console>=6.6.3",
    "jupyter-core>=5.7.2",
    "jupyterlab-server>=2.27.3",
    "jupyterlab-widgets>=3.0.13",
    "line-profiler>=4.2.0",
    "matplotlib>=3.10.0",
    "memory-profiler>=0.58.0",
    "nbclient>=0.8.0",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "numpydoc>=1.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "tzlocal>=5.2",
    "pypdf2>=3.0.1",
    "selenium>=4.31.1",
    "sklearn-compat>=0.1.3",
    "sqlalchemy>=2.0.37",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "xlwings>=0.32.1",
    "yfinance>=0.2.54",
    "pdoc>=15.0.1",
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
# Verbose output to display test results
addopts = "-v -s --tb=short"
# -v: verbose mode (shows test names)
# -s: disable output capture (shows print statements)
# --tb=short: shorter traceback format

testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Display duration of slowest tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
# E402: Module import not at top — Streamlit apps use sys.path before imports
# F403: Import star — used in config __init__.py for convenience re-exports
ignore = ["E402", "F403"]

[tool.ruff.lint.per-file-ignores]
# F401: Unused imports in __init__.py are intentional re-exports
"__init__.py" = ["F401"]
